styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* fix prism code wrap */
pre[class*="language-"],
code[class*="language-"] {
  white-space: normal !important;
  overflow: auto;
  word-break: break-word !important;
}

html {
  font-size: 16px;
}

#title-bar {
  margin-left: env(titlebar-area-x, 0);
  margin-top: env(titlebar-area-y, 0);
  height: env(titlebar-area-height, 32px);
  width: env(titlebar-area-width, 100%);
  z-index: 9;
}

#drag-region {
  -webkit-app-region: drag;
}

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 222.2 47.4% 11.2%;

    --muted: 210 40% 96.1%;
    --muted-foreground: 215.4 16.3% 46.9%;

    --popover: 0 0% 100%;
    --popover-foreground: 222.2 47.4% 11.2%;

    --border: 214.3 31.8% 91.4%;
    --input: 214.3 31.8% 91.4%;

    --card: 0 0% 100%;
    --card-foreground: 222.2 47.4% 11.2%;

    --primary: 222.2 47.4% 11.2%;
    --primary-foreground: 210 40% 98%;

    --secondary: 210 40% 96.1%;
    --secondary-foreground: 222.2 47.4% 11.2%;

    --accent: 210 40% 96.1%;
    --accent-foreground: 222.2 47.4% 11.2%;

    --destructive: 0 100% 50%;
    --destructive-foreground: 210 40% 98%;

    --ring: 215 20.2% 65.1%;

    --radius: 0.5rem;

    --token-comment-color: #6c757d;
    --token-punctuation-color: #999;
    --token-property-color: #905;
    --token-selector-color: #690;
    --token-operator-color: #9a6e3a;
    --token-attr-color: #07a;
    --token-variable-color: #e90;
    --token-function-color: #dd4a68;
  }

  .dark {
    --background: 224 71% 4%;
    --foreground: 213 31% 91%;

    --muted: 223 47% 11%;
    --muted-foreground: 215.4 16.3% 56.9%;

    --accent: 216 34% 17%;
    --accent-foreground: 210 40% 98%;

    --popover: 224 71% 4%;
    --popover-foreground: 215 20.2% 65.1%;

    --border: 216 34% 17%;
    --input: 216 34% 17%;

    --card: 224 71% 4%;
    --card-foreground: 213 31% 91%;

    --primary: 210 40% 98%;
    --primary-foreground: 222.2 47.4% 1.2%;

    --secondary: 222.2 47.4% 11.2%;
    --secondary-foreground: 210 40% 98%;

    --destructive: 0 63% 31%;
    --destructive-foreground: 210 40% 98%;

    --ring: 216 34% 17%;

    --radius: 0.5rem;

    --token-comment-color: #6c757d;
    --token-punctuation-color: #999;
    --token-property-color: #d19a66;
    --token-selector-color: #c678dd;
    --token-operator-color: #a9a9a9;
    --token-attr-color: #56a8a8;
    --token-variable-color: #e09062;
    --token-function-color: #cb6d90;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
    font-feature-settings: "rlig" 1, "calt" 1;
  }
}

body {
  height: 100vh;
  width: 100vw;
  overflow: hidden;
}

/* select */
.selected {
  background-color: hsl(var(--secondary));
}

/* fts-result > b */
.fts-result b {
  color: var(--token-function-color);
}

